--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@ nav{
     align-items: center;
     justify-content: space-around;
     background-color: black;
-    padding: 0px;
+    padding: 3px;
 }
 nav .logo{
     background-color: black;
@@ -63,16 +63,6 @@ ul a:hover{
     cursor: pointer;
 }
 
-h1{
-    color: white;
-    font-family: cursive;
-    font-size: 40px;
-    text-shadow: 5px 5px 5px black;
-}
-h2:hover{
-    cursor:default;
-}
-
 .container{
     background-color: rgba(0, 0, 0, 0.300);
     display: flex;
@@ -87,6 +77,12 @@ h2:hover{
     align-items: center;
     height: 80vh;
     padding: 0px 200px 0px 0px;
+}
+h1{
+    color: white;
+    font-family: cursive;
+    font-size: 40px;
+    text-shadow: 5px 5px 5px black;
 }
 .subcon{
     display: flex;
@@ -190,10 +186,10 @@ h2{
     color: white;
     background-color:#833ab4b1;
     font-family: cursive;
-    font-size: 40px;
+    font-size: 45px;
     text-shadow: 5px 5px 5px black;
     text-align: center;
-    padding: 20px 0px;
+    padding: 10px 0px;
 }
 .first-line{
     display: flex;
@@ -221,6 +217,10 @@ h2{
     font-family: Arial, Helvetica, sans-serif;
     color: black;
 }
+/* Update */
+.down p{
+    color: white;
+}
 h3{
     color: whitesmoke;
     text-align: center;
@@ -232,7 +232,7 @@ h3{
     text-shadow: 2px 2px 2px black;
     
 }
-input[type="submit"]{
+.container2 input[type="submit"]{
     background-color: lightgrey;
     font-size: 20px;
     text-align: center;
@@ -241,7 +241,7 @@ input[type="submit"]{
     margin: 10px;
     border-radius: 5px;
 }
-input[type="submit"]:hover{
+.container2 input[type="submit"]:hover{
     color: white;
     background-color:#00abee;
     cursor: pointer;
@@ -301,7 +301,7 @@ footer a:hover{
     }
     .right{
         padding: 0;
-        height: 50vh;
+        height: max-content;
     }
     h1{
         text-align: center;
@@ -310,12 +310,6 @@ footer a:hover{
     h2{
         text-align: center;
         padding: 0px 2px;
-    }
-    .link{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
     }
     section img{
         width: 100%;
