--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,56 +1,257 @@
 *{
     margin: 0;
     padding: 0;
+    text-decoration: none;
     box-sizing: border-box;
 }
 body{
-    background-color: blue;
+    background-image: url("../image/home-back.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
-.header{
-    color: royalblue;
-    background-color: mediumturquoise;
-    text-align: center;
-    padding: 10px;
+header{
+    position: sticky;
+    top: 0px;
+}
+
+nav{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    background-color: black;
+    padding: 3px;
+}
+nav .logo{
+    background-color: black;
+    background-size: contain;
+}
+.logo img{
+    max-width: 150px;
+}
+ul a{
     text-decoration: none;
+    color: white;
+    margin: 10px;
+    padding: 10px;
+    font-size: 20px;
 }
+ul a:hover{
+    color: black;
+    background-color: white;
+    border-radius: 5px;
+}
+#search-bar{
+    background-color: white;
+    border-radius: 5px;
+    border: none;
+    padding: 10px;
+    font-size: 15px;
+    margin-right: 10px;
+}
+#search-btn{
+    background-color: blue;
+    color: white;
+    padding: 10px 10px;
+    border-radius: 10px;
+    font-size: 15px;
+}
+#search-btn:hover{
+    background-color: #03d9ff;
+    color: black;
+    cursor: pointer;
+}
+
+h1{
+    color: white;
+    font-family: cursive;
+    font-size: 40px;
+    text-shadow: 5px 5px 5px black;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.500);
+    padding: 10px 0px;
+}
+h2{
+    color: white;
+    background-color: rgba(76, 0, 130, 0.500);
+    font-size: 30px;
+    text-align: center;
+    padding: 10px 0px;
+}
+h3{
+    font-size: 25px;
+    background-color: rgba(0, 0, 0, 0.700);
+    color: white;
+    text-align: center;
+    margin: 5px 0px;
+    padding: 5px 0px;
+}
+section{
+    margin: 10px 0px;
+    border-top: 2px solid rgba(0, 0, 0, 0.700);
+    border-bottom: 2px solid rgba(0, 0, 0, 0.700);
+}
+section img{
+    max-width: 100%;
+}
+
 .first-line{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    background-color: rgba(135, 206, 250, 0.400);
+    height: 60vh;
 }
 .first{
     background-color: rgba(245, 245, 245, 0.495);
     border: none;
-    margin: 20px;
-    width: 30%;
-    padding: 10px;
+    margin: 15px;
+    width: 100%;
     box-shadow: 5px 5px 5px black;
+    height: max-content;
 }
-p{
-    font-size: 30px;
-}
-input[type="submit"]{
-    background-color: lightgrey;
-    font-size: 20px;
-    text-align: center;
-    border: none;
-    padding: 10px;
-}
-input[type="submit"]:hover{
-    background-color: lightseagreen;
-    cursor: pointer;
-}
-h1{
-    text-decoration: underline;
-}
+
 .second-line{
     display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgba(32, 178, 171, 0.400);
+    height: 80vh;
 }
 .second{
     background-color: rgba(245, 245, 245, 0.619);
     border: none;
-    margin: 20px;
-    width: 33%;
-    padding: 10px;
+    margin: 15px;
+    width: 100%;
     box-shadow: 5px 5px 5px black;
+}
+
+.third-line{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgba(47, 79, 79, 0.400);
+    height: 60vh;
+}
+.third{
+    background-color: rgba(245, 245, 245, 0.619);
+    border: none;
+    margin: 10px;
+    width: 100%;
+    box-shadow: 5px 5px 5px black;
+}
+
+.fourth-line{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgba(46, 139, 86, 0.400);
+}
+.fourth{
+    margin: 10px 0px;
+    width: 100%;
+}
+
+/* Footer */
+footer{
+    background-color: rgba(0, 0, 0, 0.750);
+    padding: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+footer a{
+    color: white;
+    text-decoration: none;
+    margin: 10px 20px;
+    font-size: 18px;
+}
+footer a:hover{
+    color:lightblue;
+}
+
+/* Responsiveness */
+@media screen and (max-width:850px) {
+    body{
+        background-image: url("../image/home-back-sd.jpg");
+    }
+    header{
+        position: static;
+    }
+    nav{
+        flex-direction: column;
+    }
+    .navbar ul{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+    .logo{
+        display: flex;
+        justify-content: center;
+        position: sticky;
+        top: 0px;
+        width: 100%;
+    }
+    .container{
+        flex-direction: column;
+        justify-content: center;
+        padding: 0;
+        align-items: center;
+    }
+    .left{
+        padding: 0;
+        height: 40vh;
+    }
+    .right{
+        padding: 0;
+        height: max-content;
+    }
+    h1{
+        text-align: center;
+        padding: 0px 2px;
+    }
+    h2{
+        text-align: center;
+        padding: 0px 2px;
+    }
+    section img{
+        width: 100%;
+    }
+    .first-line, .second-line, .third-line, .fourth-line{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: max-content;
+    }
+    .first, .second, .third, .fourth{
+        width: 90%;
+        height: max-content;
+        margin: 10px 0px;
+    }
+    .foot{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .foot2{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    footer{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
 }
