--- a/css/index.css
+++ b/css/index.css
@@ -1,91 +1,39 @@
-*{
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    box-sizing: border-box;
-}
-body{
-    background-image: url("../image/home-back.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-}
-header{
-    position: sticky;
-    top: 0px;
-}
-
-nav{
+/* First Section Home */
+.contain{
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-around;
-    background-color: black;
-    padding: 3px;
-}
-nav .logo{
-    background-color: black;
-    background-size: contain;
-}
-.logo img{
-    max-width: 150px;
-}
-ul a{
-    text-decoration: none;
-    color: white;
-    margin: 10px;
-    padding: 10px;
-    font-size: 20px;
-}
-ul a:hover{
-    color: black;
-    background-color: white;
-    border-radius: 5px;
-}
-#search-bar{
-    background-color: white;
-    border-radius: 5px;
-    border: none;
-    padding: 10px;
-    font-size: 15px;
-    margin-right: 10px;
-    border: 2px solid white;
-}
-#search-btn{
-    background-color: black;
-    border: 2px solid seagreen;
-    color: white;
-    padding: 10px 10px;
-    border-radius: 5px;
-    font-size: 15px;
-}
-#search-btn:hover{
-    background-color: seagreen;
-    color: white;
-    cursor: pointer;
-}
-
-.container{
-    background-color: rgba(0, 0, 0, 0.300);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 0px 55px;
 }
 .left{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 80vh;
-    padding: 0px 200px 0px 0px;
+    width: 50%;
 }
-h1{
-    color: white;
-    font-family: cursive;
+
+.left p{
+    font-size: 17px;
+    font-weight: 500;
+    padding: 0px 20px;
+    text-align: center;
+    margin: 10px 0px;
+}
+.left h1{
+    color: black;
+    font-family: 'Signika Negative', sans-serif;
     font-size: 40px;
-    text-shadow: 5px 5px 5px black;
+    margin: 0px 0px 20px 0px;
 }
+
+.left h1 #nd{
+    color: #00abee;
+}
+
+.left h1 #rd{
+    color: salmon;
+}
+
 .subcon{
     display: flex;
     flex-direction: row;
@@ -106,97 +54,34 @@ h1{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-end;
-    height: 80vh;
-}
-#fb{
-    background-color: #4267b2cb;
-    padding: 10px 0px;
-    margin: 15px 10px;
-    width: 200px;
-    text-align: center;
-    border-radius: 5px;
-}
-#fb:hover{
-    background-color: #4267B2;
-    cursor: pointer;
-    box-shadow: 3px 3px 3px black;
-}
-#fb a{
-    color: white;
-    font-size: 22px;
-}
-#ig{
-    background: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
-    padding: 10px 0px;
-    margin: 15px 10px;
-    width: 200px;
-    text-align: center;
-    border-radius: 5px;
-}
-#ig a{
-    color: white;
-    font-size: 22px;
-}
-#ig:hover{
-    cursor: pointer;
-    box-shadow: 3px 3px 3px black;
-}
-#yt{
-    background-color: #ff0000c0;
-    padding: 10px 0px;
-    margin: 15px 10px;
-    width: 200px;
-    text-align: center;
-    border-radius: 5px;
-}
-#yt a{
-    color: white;
-    font-size: 22px;
-}
-#yt:hover{
-    background-color: #ff0000e2;
-    cursor: pointer;
-    box-shadow: 3px 3px 3px black;
-}
-#tt{
-    background-color: #00abeec5;
-    padding: 10px 0px;
-    margin: 15px 10px;
-    width: 200px;
-    text-align: center;
-    border-radius: 5px;
-}
-#tt a{
-    color: white;
-    font-size: 22px;
-}
-#tt:hover{
-    background-color: #00abee;
-    cursor: pointer;
-    box-shadow: 3px 3px 3px black;
+    align-items: center;
+    width: 50%;
 }
 
-/* Second Section Container 2 */
-.container2{
-    background-color: rgba(47, 79, 79, 0.500);
-}
-.container2 img{
+.right img{
     width: 100%;
+    opacity: 5;
 }
-h2{
+
+
+/* Second Section Contents */
+
+.container2 img{
+    width: 80%;
+    border-radius: 5px;
+}
+.container2 h2{
     color: white;
     background-color:#833ab4b1;
-    font-family: cursive;
-    font-size: 45px;
-    text-shadow: 5px 5px 5px black;
+    font-family: sans-serif;
+    font-size: 35px;
+    padding: 5px;
     text-align: center;
-    padding: 10px 0px;
 }
 .first-line{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 .first{
     border: none;
@@ -205,33 +90,42 @@ h2{
     height: max-content;
 }
 .up{
-    background-color: rgba(245, 245, 245, 0.300);
+    background-color: white;
     margin-bottom: 20px;
-    box-shadow: 5px 5px 5px black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    padding-top: 5px;
+    border: 1px solid grey;
 }
 .down{
-    background-color: rgba(95, 158, 160, 0.300);
+    background-color: white;
     margin-bottom: 20px;
-    box-shadow: 5px 5px 5px black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    padding-top: 5px;
+    border: 1px solid grey;
 }
 .first p{
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     color: black;
 }
-/* Update */
+
 .down p{
     color: white;
 }
 h3{
-    color: whitesmoke;
+    color: rgb(86, 86, 86);
     text-align: center;
     padding: 5px;
     font-size: 30px;
-    font-family: cursive;
-    text-transform: uppercase;
-    background-color: rgba(0, 0, 0, 0.600);
-    text-shadow: 2px 2px 2px black;
+    font-family: 'Signika Negative', sans-serif;
     
 }
 .container2 input[type="submit"]{
@@ -249,61 +143,90 @@ h3{
     cursor: pointer;
 }
 
-/* Footer */
-footer{
-    background-color: rgba(0, 0, 0, 0.750);
-    padding: 30px;
+
+/* Section Contact Us */
+.contact{
+    width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
-footer a{
+.contact h2{
+    color: black;
+    padding: 10px;
+    background-color:#833ab4b1;
     color: white;
-    text-decoration: none;
-    margin: 10px 20px;
-    font-size: 18px;
+    font-family: sans-serif;
+    width: 100%;
+    text-align: center;
 }
-footer a:hover{
-    color:lightblue;
+
+.contact form{
+    width: 350px;
+    padding: 10px;
+    padding-top: 15px;
+    border: 1px solid grey;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.63);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
+
+.contact form p{
+    font-size: 15px;
+    color: white;
+}
+.contact input[type="text"], .contact input[type="email"]{
+    width: 100%;
+    padding: 10px;
+    font-size: 12px;
+}
+
+.contact #subject{
+    padding: 10px;
+    width: 100%;
+    font-size: 12px;
+}
+.contact #message{
+    width: 100%;
+    height: 60px;
+    padding: 5px;
+}
+
+.contact input[type="submit"]{
+    background-color:midnightblue;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    height: 40px;
+    width: 120px;
+}
+.contact input[type="submit"]:hover{
+    background-color: green;
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+}
+
 
 /* Responsiveness */
 @media screen and (max-width:850px) {
-    body{
-        background-image: url("../image/home-back-sd.jpg");
-    }
-    header{
-        position: static;
-    }
-    nav{
-        flex-direction: column;
-    }
-    .navbar ul{
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-    }
-    .logo{
-        display: flex;
-        justify-content: center;
-        position: sticky;
-        top: 0px;
-        width: 100%;
-    }
-    .container{
+
+    .contain{
         flex-direction: column;
         justify-content: center;
-        padding: 0;
+        padding: 30px 0px;
         align-items: center;
     }
     .left{
         padding: 0;
-        height: 40vh;
+        width: 100%;
     }
     .right{
         padding: 0;
         height: max-content;
+        width: 100%;
     }
     h1{
         text-align: center;
@@ -328,21 +251,8 @@ footer a:hover{
         padding: 10px;
         margin: 10px 0px;
     }
-    .foot{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .foot2{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    footer{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+
+    .contact form{
+        width: 80%;
     }
 }
