--- a/css/index.css
+++ b/css/index.css
@@ -34,6 +34,10 @@
     color: salmon;
 }
 
+.left h3{
+    color: grey;
+}
+
 .subcon{
     display: flex;
     flex-direction: row;
@@ -64,153 +68,8 @@
 }
 
 
-/* Second Section Contents */
-
-.container2 img{
-    width: 80%;
-    border-radius: 5px;
-}
-.container2 h2{
-    color: white;
-    background-color:#833ab4b1;
-    font-family: sans-serif;
-    font-size: 35px;
-    padding: 5px;
-    text-align: center;
-}
-.first-line{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-}
-.first{
-    border: none;
-    margin: 20px;
-    width: 30%;
-    height: max-content;
-}
-.up{
-    background-color: white;
-    margin-bottom: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
-    padding-top: 5px;
-    border: 1px solid grey;
-}
-.down{
-    background-color: white;
-    margin-bottom: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
-    padding-top: 5px;
-    border: 1px solid grey;
-}
-.first p{
-    padding: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: black;
-}
-
-.down p{
-    color: white;
-}
-h3{
-    color: rgb(86, 86, 86);
-    text-align: center;
-    padding: 5px;
-    font-size: 30px;
-    font-family: 'Signika Negative', sans-serif;
-    
-}
-.container2 input[type="submit"]{
-    background-color: lightgrey;
-    font-size: 20px;
-    text-align: center;
-    border: none;
-    padding: 10px;
-    margin: 10px;
-    border-radius: 5px;
-}
-.container2 input[type="submit"]:hover{
-    color: white;
-    background-color:#00abee;
-    cursor: pointer;
-}
-
-
-/* Section Contact Us */
-.contact{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.contact h2{
-    color: black;
-    padding: 10px;
-    background-color:#833ab4b1;
-    color: white;
-    font-family: sans-serif;
-    width: 100%;
-    text-align: center;
-}
-
-.contact form{
-    width: 350px;
-    padding: 10px;
-    padding-top: 15px;
-    border: 1px solid grey;
-    border-radius: 5px;
-    background-color: rgba(0, 0, 0, 0.63);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.contact form p{
-    font-size: 15px;
-    color: white;
-}
-.contact input[type="text"], .contact input[type="email"]{
-    width: 100%;
-    padding: 10px;
-    font-size: 12px;
-}
-
-.contact #subject{
-    padding: 10px;
-    width: 100%;
-    font-size: 12px;
-}
-.contact #message{
-    width: 100%;
-    height: 60px;
-    padding: 5px;
-}
-
-.contact input[type="submit"]{
-    background-color:midnightblue;
-    border: none;
-    border-radius: 10px;
-    color: white;
-    height: 40px;
-    width: 120px;
-}
-.contact input[type="submit"]:hover{
-    background-color: green;
-    cursor: pointer;
-    transition: all .3s ease-in-out;
-}
-
-
 /* Responsiveness */
+/* Updated */
 @media screen and (max-width:850px) {
 
     .contain{
@@ -250,9 +109,5 @@ h3{
         height: max-content;
         padding: 10px;
         margin: 10px 0px;
-    }
-
-    .contact form{
-        width: 80%;
     }
 }
