--- a/css/signup.css
+++ b/css/signup.css
@@ -4,14 +4,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 50px 0px;
 }
 .content{
-    border-radius: 5px;
+    width: 50vw;
+    min-width: 700px;
     display: flex;
     flex-direction: row;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 h2{
-    color: white;
+    color: slateblue;
     padding: 10px 0px;
     width: 100%;
     text-align: center;
@@ -25,14 +29,15 @@ h2{
     align-items: center;
     width: 50%;
     background-color: darkslategray;
+    border-radius: 5px 0px 0px 5px;
 }
 .left form{
-    width: 60%;
-    padding: 20px;
-    border-radius: 5px;
-    border: 2px solid white;
+    width: 100%;
+    padding: 15px;
+    margin: 5px;
 }
 .content .right{
+    display: flex;
     width: 50%
 }
 
@@ -48,21 +53,23 @@ h2{
     font-size: 17px;
     font-weight:normal;
     color: white;
+    margin: 5px 0px;
 }
-
+.content input[type="text"],
 .content input[type="email"],
 .content input[type="password"]{
     width: 100%;
     padding: 5px;
-    margin: 10px 0px;
+    margin: 5px 0px;
     font-size: 17px;
+    border: none;
+    border-radius: 3px;
 }
-
 .btn{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 .content input[type="submit"]{
     background-color:royalblue;
@@ -70,9 +77,9 @@ h2{
     width: 120px;
     border: none;
     border-radius: 4px;
-    padding: 10px;
+    padding: 7px;
     margin: 20x;
-    font-size: medium;
+    font-size: 18px;
     font-family: 'Signika Negative', sans-serif;
 }
 .content input[type="submit"]:hover{
@@ -109,17 +116,19 @@ h2{
 }
 
 /* Responsiveness */
-@media screen and (max-width:850px) {
+@media screen and (max-width:700px) {
     .content{
         flex-direction: column;
         justify-content: center;
         padding: 0;
         align-items: center;
         width: 100%;
+        min-width: 100px;
     }
     .content .left{
         padding: 10px 0px;
-        width: 100%;
+        width: 90%;
+        border-radius: 5px;
     }
     .content .left form{
         width: 90%;
